Fix ranking wrapping for long names

--- a/app/assets/stylesheets/pong.scss
+++ b/app/assets/stylesheets/pong.scss
@@ -65,7 +65,6 @@ ol {
 
 li {
   padding: 5px 2.5%;
-  width: 95%;
   line-height: 48px;
 }
 
